# MACS_VUBot

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
models/: client.py  cog.py  command_registry.py
src/: commands.py  parser.py
