[tool.poetry]
name = "macs_vubot"
version = "0.1.0"
description = "A simple bot for the MaCS discord server"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
discord-py-slash-command = "^3.0.1"
hereby = "^0.3.1"
coloredlogs = "^15.0.1"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
rope = "^0.21.1"
isort = "^5.10.1"
pyproject-flake8 = "^5.0.4"

[tool.pylint.basic]
const_naming_style = "UPPER_CASE"
class_naming_style = "PascalCase"
function_naming_style = "camelCase"
method_naming_style = "snake_case"
module_naming_style = "any"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119
exclude = '^.git'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
